WIP: Fix code whitespace in man pages

--- a/doc/mandoc.css
+++ b/doc/mandoc.css
@@ -55,6 +55,7 @@ pre, tt, code {
   -ms-hyphens: none;
   -webkit-hyphens: none;
   hyphens: none;
+  white-space: nowrap;
 }
 
 ul, ol, dl {
